--- a/index.html
+++ b/index.html
@@ -28,89 +28,65 @@
   <h1>Добро пожаловать в Седону</h1>
 
   <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
-  <p>
-    <h2>Седона — небольшой городок в Аризоне,<br>
-    заслуживающий большего!
-    </h2>
-    Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
-  </p>
+
+    <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
+
+    <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+
 
   <section>
     <h2>Преимущества Седоны</h2>
     <ul>
       <li>
-        <h3>Настоящий<br>
-          городок
-        </h3>
-          <p> — №1 —<br>
-          Седона — не аттракцион для туристов,<br>
-          там течёт своя жизнь
-          </p>
-          <img src="img/feature-picture.png" width="440" height="780" alt="Художественная фотография">
+        <h3>Настоящий городок</h3>
+         <span> — №1 — </span>
+         <p>Седона — не аттракцион для туристов,там течёт своя жизнь</p>
+        <img src="img/feature-picture.png" width="440" height="780" alt="Художественная фотография">
       </li>
 
       <li>
         <img src="img/icon-1.png" width="75" height="72" alt="Иконка Жилье">
         <h3>Жилье</h3>
-        <p>Рекомендуем пожить в настоящем<br>
-          мотеле, всё как в кино!
-        </p>
+        <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
       </li>
 
       <li>
         <img src="img/icon-3.png" width="74" height="70" alt="Иконка Еда">
         <h3>Еда</h3>
-        <p>Всегда заказывайте фирменный бургер,<br>
-           вы не разочаруетесь!
-        </p>
+        <p>Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
       </li>
 
       <li>
         <img src="img/icon-2.png" width="64" height="76" alt="Иконка Сувениры">
         <h3>Сувениры</h3>
-        <p>Не только китайского, но и местного<br>
-          производства!</p>
+        <p>Не только китайского, но и местного производства!</p>
       </li>
 
       <li>
         <h3>Там есть<br>
           Мост дьявола
         </h3>
-          <p> — №2 —<br>
-            Да, по нему можно пройти! Если конечно<br>
-            вы осмелитесь
-          </p>
+          <span> — №2 — </span>
+           <p>Да, по нему можно пройти! Если конечно вы осмелитесь </p>
           <img src="img/layer-5.png" width="800" height="256" alt="Слой 5">
       </li>
 
       <li>
-        <h3>Небольшая<br>
-           площадь
-        </h3>
-          <p> — №3 —<br>
-            Все достопримечательности<br>
-            находятся очень близко
-          </p>
+        <h3>Небольшая площадь</h3>
+        <span> — №3 — </span>
+        <p>Все достопримечательности находятся очень близко</p>
       </li>
 
       <li>
-        <h3>Красивая<br>
-           дорога
-        </h3>
-          <p> — №4 —<br>
-            Ехать в Седону из Лас-Вегаса совсем<br>
-            не скучно!
-          </p>
+        <h3>Красивая дорога</h3>
+           <span> — №4 — </span>
+        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </li>
 
       <li>
-        <h3>Мало<br>
-           Туристов
-        </h3>
-          <p> — №5 —<br>
-           Большинство едет в гранд каньон<br>
-            и толпится там
-          </p>
+        <h3>Мало Туристов</h3>
+          <span> — №5 — </span>
+        <p>Большинство едет в гранд каньон и толпится там</p>
       </li>
     </ul>
   </section>
@@ -122,14 +98,14 @@
     и мы покажем вам лучшие предложения гостиниц в седоне</p>
     <button type="button">Поиск гостиницы в Седоне</button>
   </section>
- 
+
 
 <!--Форма поиска гостиницы-->
   <section>
     <h2>поиск гостиницы в Седоне</h2>
 <!-- Здесь будет форма -->
   </section>
- 
+
 </main>
 <!--Основное содержимое-->
 
@@ -140,19 +116,20 @@
     Тел: +7(495) 666-02-66
   </p>
 
-  <div>
-    <ul>
-      <li><a href="#">Твитер</a></li>
-      <li><a href="#">Фейсбук</a></li>
-      <li><a href="#">Ютуб</a></li>
-    </ul>
-  </div>
+
+  <ul>
+    <li><a href="#">Твитер</a></li>
+    <li><a href="#">Фейсбук</a></li>
+    <li><a href="#">Ютуб</a></li>
+  </ul>
+
 
   <p>
     Website by
+  <a>
+    <img src="img/logo-htmla.png" width="115" height="41" alt="Логотип HTML Academy">
+  </a>
   </p>
-
-  <img src="img/logo-htmla.png" width="115" height="41" alt="Логотип HTML Academy">
 </footer>
 <!--подвал станицы-->
   </body>
