Добавил форму, убрал br,  main теперь - 2 списками

--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 
 <!--Основное содержимое-->
 <main>
-  <h1>Добро пожаловать в Седону</h1>
 
   <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
-
-    <h2>Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
-
+  
+  <section>
+    <h2>Седона — небольшой городок в&#160Аризоне, заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-
+  </section>
 
   <section>
     <h2>Преимущества Седоны</h2>
@@ -41,27 +40,27 @@
         <h3>Настоящий городок</h3>
          <span> — №1 — </span>
          <p>Седона — не аттракцион для туристов,там течёт своя жизнь</p>
-        <img src="img/feature-picture.png" width="440" height="780" alt="Художественная фотография">
+        <img src="img/feature-picture.png" width="440" height="780" alt="фотография Седоны">
       </li>
+        <ul>
+          <li>
+          <img src="img/icon-1.png" width="75" height="72" alt="Иконка Жилье">
+          <h3>Жилье</h3>
+          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
 
-      <li>
-        <img src="img/icon-1.png" width="75" height="72" alt="Иконка Жилье">
-        <h3>Жилье</h3>
-        <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-      </li>
+          <li>
+          <img src="img/icon-3.png" width="74" height="70" alt="Иконка Еда">
+          <h3>Еда</h3>
+          <p>Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+          </li>
 
-      <li>
-        <img src="img/icon-3.png" width="74" height="70" alt="Иконка Еда">
-        <h3>Еда</h3>
-        <p>Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
-      </li>
-
-      <li>
-        <img src="img/icon-2.png" width="64" height="76" alt="Иконка Сувениры">
-        <h3>Сувениры</h3>
-        <p>Не только китайского, но и местного производства!</p>
-      </li>
-
+          <li>
+          <img src="img/icon-2.png" width="64" height="76" alt="Иконка Сувениры">
+          <h3>Сувениры</h3>
+          <p>Не только китайского, но и местного производства!</p>
+          </li>
+        </ul>
       <li>
         <h3>Там есть<br>
           Мост дьявола
@@ -70,41 +69,71 @@
            <p>Да, по нему можно пройти! Если конечно вы осмелитесь </p>
           <img src="img/layer-5.png" width="800" height="256" alt="Слой 5">
       </li>
+        <ul>
+          <li>
+          <h3>Небольшая площадь</h3>
+          <span> — №3 — </span>
+          <p>Все достопримечательности находятся очень близко</p>
+          </li>
 
-      <li>
-        <h3>Небольшая площадь</h3>
-        <span> — №3 — </span>
-        <p>Все достопримечательности находятся очень близко</p>
-      </li>
+          <li>
+          <h3>Красивая дорога</h3>
+          <span> — №4 — </span>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
 
-      <li>
-        <h3>Красивая дорога</h3>
-           <span> — №4 — </span>
-        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-      </li>
-
-      <li>
-        <h3>Мало Туристов</h3>
+          <li>
+          <h3>Мало Туристов</h3>
           <span> — №5 — </span>
-        <p>Большинство едет в гранд каньон и толпится там</p>
-      </li>
+          <p>Большинство едет в гранд каньон и толпится там</p>
+          </li>
+        </ul>
     </ul>
   </section>
 
   <section>
     <h2>Заинтересовались?</h2>
 
-    <p>Укажите предполагаемые даты поездки,<br>
-    и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    <p>Укажите предполагаемые даты&#160поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
     <button type="button">Поиск гостиницы в Седоне</button>
   </section>
 
 
 <!--Форма поиска гостиницы-->
   <section>
-    <h2>поиск гостиницы в Седоне</h2>
-<!-- Здесь будет форма -->
+    <h2>Поиск гостиницы в Седоне</h2>
+
+  <form action="#" method="#">
+  <div>
+    <label for="arrival day">Дата заезда:</label>
+    <input type="date" name="arrival day" id="arrival day">
+  </div>
+  <div>
+    <label for="departure day">Дата выезда:</label>
+    <input type="date" name="" id="departure day">
+  </div>
+  <div>
+    <label for="adults">Взрослые:</label>    
+    <span>-</span>
+    <input type="number" name="adults" id="adults" value="2" min="1" max="5" step="1">
+    <span>+</span>
+  </div>
+  <div>
+    <label for="kids">Дети:</label>    
+    <span>-</span>
+    <input type="text" name="kids" id="kids" value="0" min="0" max="5" step="1">
+    <span>+</span>
+  </div>
+  <button type="submit">Найти</button>
+</form> 
+
   </section>
+
+<!--Интерактивная карта-->
+
+<section>
+<!-- Здесь будет карта -->
+</section>
 
 </main>
 <!--Основное содержимое-->
@@ -112,7 +141,7 @@
 <!--подвал станицы-->
 <footer>
   <p>
-    #visitSEDONA<br>
+    #VISITSEDONA<br>
     Тел: +7(495) 666-02-66
   </p>
 
