причесал код, поправил форму

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
   </head>
   <body>
 <!--Шапка страницы-->
-<header>
+  <header>
   <nav>
-    <a>
-      <img src="img/index-logo.png" width="140" height="71" alt="Логотип города Седона">
-    </a>
+    <img src="img/index-logo.png" width="140" height="71" alt="Логотип города Седона">
 
     <ul>
       <li><a href="info.html">Информация</a></li>
@@ -25,11 +23,11 @@
 
 <!--Основное содержимое-->
 <main>
-
+  <a>
   <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
-  
+  </a>
   <section>
-    <h2>Седона — небольшой городок в&#160Аризоне, заслуживающий большего!</h2>
+    <h2>Седона — небольшой городок в&#160;Аризоне, заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
   </section>
 
@@ -69,32 +67,32 @@
            <p>Да, по нему можно пройти! Если конечно вы осмелитесь </p>
           <img src="img/layer-5.png" width="800" height="256" alt="Слой 5">
       </li>
-        <ul>
-          <li>
-          <h3>Небольшая площадь</h3>
-          <span> — №3 — </span>
-          <p>Все достопримечательности находятся очень близко</p>
-          </li>
 
-          <li>
-          <h3>Красивая дорога</h3>
-          <span> — №4 — </span>
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
+      <li>
+        <h3>Небольшая площадь</h3>
+        <span> — №3 — </span>
+        <p>Все достопримечательности находятся очень близко</p>
+      </li>
 
-          <li>
-          <h3>Мало Туристов</h3>
-          <span> — №5 — </span>
-          <p>Большинство едет в гранд каньон и толпится там</p>
-          </li>
-        </ul>
+      <li>
+        <h3>Красивая дорога</h3>
+        <span> — №4 — </span>
+        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      </li>
+
+      <li>
+        <h3>Мало Туристов</h3>
+        <span> — №5 — </span>
+        <p>Большинство едет в гранд каньон и толпится там</p>
+      </li>
+        
     </ul>
   </section>
 
   <section>
     <h2>Заинтересовались?</h2>
 
-    <p>Укажите предполагаемые даты&#160поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    <p>Укажите предполагаемые даты&#160;поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
     <button type="button">Поиск гостиницы в Седоне</button>
   </section>
 
@@ -114,15 +112,15 @@
   </div>
   <div>
     <label for="adults">Взрослые:</label>    
-    <span>-</span>
+    <button>-</button>
     <input type="number" name="adults" id="adults" value="2" min="1" max="5" step="1">
-    <span>+</span>
+    <button>+</button>
   </div>
   <div>
     <label for="kids">Дети:</label>    
-    <span>-</span>
+    <button>-</button>
     <input type="text" name="kids" id="kids" value="0" min="0" max="5" step="1">
-    <span>+</span>
+    <button>+</button>
   </div>
   <button type="submit">Найти</button>
 </form> 
@@ -132,7 +130,7 @@
 <!--Интерактивная карта-->
 
 <section>
-<!-- Здесь будет карта -->
+  <img src="img/map.png" width="1200" height="593" alt="Карта">
 </section>
 
 </main>
@@ -155,7 +153,7 @@
 
   <p>
     Website by
-  <a>
+  <a href="https://htmlacademy.ru/intensive/htmlcss">
     <img src="img/logo-htmla.png" width="115" height="41" alt="Логотип HTML Academy">
   </a>
   </p>
