--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
     <ul>
       <li><a href="info.html">Информация</a></li>
-      <li><a href="news.html">Фото и Видео</a></li>
-      <li><a href="price.html">Карта штата</a></li>
-      <li><a href="catalog.html">Гостиницы</a></li>
-      <li><a href="contacts.html">Контакты</a></li>
+      <li><a href="galery.html">Фото и Видео</a></li>
+      <li><a href="map.html">Карта штата</a></li>
+      <li><a href="catalog.html">Гостиницы</a></li>  
     </ul>
 
   </nav>
