--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--Шапка страницы-->
   <header>
   <nav>
-    <img src="img/index-logo.png" width="140" height="71" alt="Логотип города Седона">
+    <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
 
     <ul>
       <li><a href="info.html">Информация</a></li>
@@ -23,8 +23,9 @@
 
 <!--Основное содержимое-->
 <main>
-  <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
-  
+  <img src="img/background-photo.jpg" alt="фоновое изображение">
+  <img src="img/intro-welcome.svg" width="459" height="353" alt="Изображение Добро пожаловать">
+ 
   <section>
     <h2>Седона — небольшой городок в&#160;Аризоне, заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -37,23 +38,23 @@
         <h3>Настоящий городок</h3>
          <span> — №1 — </span>
          <p>Седона — не аттракцион для туристов,там течёт своя жизнь</p>
-        <img src="img/feature-picture.png" width="440" height="780" alt="фотография Седоны">
+        <img src="img/feature-picture-1.jpg" width="800" height="256" alt="фотография Седоны">
       </li>
         <ul>
           <li>
-          <img src="img/icon-1.png" width="75" height="72" alt="Иконка Жилье">
+          <img src="img/icon-1.svg" width="75" height="72" alt="Иконка Жилье">
           <h3>Жилье</h3>
           <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
 
           <li>
-          <img src="img/icon-3.png" width="74" height="70" alt="Иконка Еда">
+          <img src="img/icon-3.svg" width="74" height="70" alt="Иконка Еда">
           <h3>Еда</h3>
           <p>Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
           </li>
 
           <li>
-          <img src="img/icon-2.png" width="64" height="76" alt="Иконка Сувениры">
+          <img src="img/icon-2.svg" width="64" height="76" alt="Иконка Сувениры">
           <h3>Сувениры</h3>
           <p>Не только китайского, но и местного производства!</p>
           </li>
@@ -64,7 +65,7 @@
         </h3>
           <span> — №2 — </span>
            <p>Да, по нему можно пройти! Если конечно вы осмелитесь </p>
-          <img src="img/layer-5.png" width="800" height="256" alt="Слой 5">
+          <img src="img/feature-picture-2.jpg" width="800" height="256" alt="Слой 5">
       </li>
 
       <li>
@@ -153,7 +154,7 @@
   <p>
     Website by
   <a href="https://htmlacademy.ru/intensive/htmlcss">
-    <img src="img/logo-htmla.png" width="115" height="41" alt="Логотип HTML Academy">
+    <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
   </a>
   </p>
 </footer>
