--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!--Основное содержимое-->
 <main>
   <img src="img/background-photo.jpg" alt="фоновое изображение">
-  <img src="img/intro-welcome.svg" width="459" height="353" alt="Изображение Добро пожаловать">
+  <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
  
   <section>
     <h2>Седона — небольшой городок в&#160;Аризоне, заслуживающий большего!</h2>
