сверстал страницу отелей+вставил фото и иконки

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
+  
   <body>
 <!--Шапка страницы-->
   <header>
@@ -11,6 +12,7 @@
     <a href="index.html">
     <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
     </a>
+
     <ul>
       <li><a href="info.html">Информация</a></li>
       <li><a href="galery.html">Фото и Видео</a></li>
@@ -23,7 +25,7 @@
 <!--Шапка страницы-->
 
 <!--Основное содержимое-->
-<main>
+  <main>
 <!-- фильтр выбора отелей -->    
     
     <section>
@@ -117,9 +119,9 @@
   
   
         <ul>
-            <li><a href="#">Твитер</a></li>
-            <li><a href="#">Фейсбук</a></li>
-            <li><a href="#">Ютуб</a></li>
+          <li><a href="https://twitter.com/"><img src="img/twitter.svg"></a></li>
+          <li><a href="https://www.facebook.com/"><img src="img/facebook.svg"></a></li>
+          <li><a href="https://www.youtube.com/"><img src="img/youtube.svg"></a></li>
         </ul>
   
   
