--- a/index.html
+++ b/index.html
@@ -138,24 +138,23 @@
 
 <!--подвал станицы-->
 <footer>
-  <p>
-    #VISITSEDONA<br>
-    Тел: +7(495) 666-02-66
-  </p>
+  
+  <p>#VISITSEDONA</p>
+  <p>Тел: +7(495) 666-02-66</p>
+  
 
 
   <ul>
-    <li><a href="#">Твитер</a></li>
-    <li><a href="#">Фейсбук</a></li>
-    <li><a href="#">Ютуб</a></li>
+    <li><a href="https://twitter.com/"><img src="img/twitter.svg"></a></li>
+    <li><a href="https://www.facebook.com/"><img src="img/facebook.svg"></a></li>
+    <li><a href="https://www.youtube.com/"><img src="img/youtube.svg"></a></li>
   </ul>
 
 
   <p>
     Website by
-  <a href="https://htmlacademy.ru/intensive/htmlcss">
-    <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-  </a>
+    <a href="https://htmlacademy.ru/intensive/htmlcss">
+    <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy"></a>
   </p>
 </footer>
 <!--подвал станицы-->
