--- a/catalog.html
+++ b/catalog.html
@@ -69,12 +69,8 @@
         </ul>
       </section>
 <!--стрелки -->
-    <div>
-      <input type="image" src="img/icon-up-dir.svg" alt="Up">
-    </div>
-    <div>
-      <input type="image" src="img/icon-down-dir.svg" alt="Down">
-    </div>
+    <a><img src="img/icon-up-dir.svg" alt="Up"></a>
+    <a><img src="img/icon-down-dir.svg" alt="Down"></a>
 <!--стрелки -->
     <section>
     <article>
