поправил отступы кода

--- a/catalog.html
+++ b/catalog.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
   
-  <body>
+<body>
 <!--Шапка страницы-->
-  <header>
+<header>
   <nav>
     <a href="index.html">
     <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
@@ -25,54 +25,53 @@
 <!--Шапка страницы-->
 
 <!--Основное содержимое-->
-  <main>
-<!-- фильтр выбора отелей -->    
-    
-    <section>
-        <h2>Фильтр по отелям</h2>
-        <form action="#" method="#">
-        <fieldset>
-            <legend>Инфраструктура:</legend>
-            <input type="checkbox" name="pool" id="pool" checked>
-            <label for="pool">Бассейн</label>
-            <input type="checkbox" name="parking" id="parking">
-            <label for="parking">Парковка</label>
-            <input type="checkbox" name="internet" id="internet">
-            <label for="internet">wi-fi</label>
-        </fieldset>
-        <fieldset>
-            <legend>Тип жилья:</legend>
-            <input type="checkbox" name="hotel" id="hotel" checked>
-            <label for="hotel">Гостиница</label>
-            <input type="checkbox" name="motel" id="motel" checked>
-            <label for="motel">Мотель</label>
-            <input type="checkbox" name="apartments" id="apartments" checked>
-            <label for="apartments">Апартаменты</label>
-        </fieldset>
-        <fieldset>
-            <legend>Стоимость в сутки (Р):</legend>
-             От 0<input type="range" id="costperday" name="costperday" min="0" max="3000" step="500">До 3000
-            <button type="submit">Показать</button>
-        </fieldset>
-        </form>
-    </section>    
+<main>
+<!-- фильтр выбора отелей -->     
+  <section>
+  <h2>Фильтр по отелям</h2>
+    <form action="#" method="#">
+      <fieldset>
+        <legend>Инфраструктура:</legend>
+        <input type="checkbox" name="pool" id="pool" checked>
+        <label for="pool">Бассейн</label>
+        <input type="checkbox" name="parking" id="parking">
+        <label for="parking">Парковка</label>
+        <input type="checkbox" name="internet" id="internet">
+        <label for="internet">wi-fi</label>
+      </fieldset>
+      <fieldset>
+        <legend>Тип жилья:</legend>
+        <input type="checkbox" name="hotel" id="hotel" checked>
+        <label for="hotel">Гостиница</label>
+        <input type="checkbox" name="motel" id="motel" checked>
+        <label for="motel">Мотель</label>
+        <input type="checkbox" name="apartments" id="apartments" checked>
+        <label for="apartments">Апартаменты</label>
+      </fieldset>
+      <fieldset>
+        <legend>Стоимость в сутки (Р):</legend>
+        От 0<input type="range" id="costperday" name="costperday" min="0" max="3000" step="500">До 3000
+        <button type="submit">Показать</button>
+      </fieldset>
+    </form>
+  </section>    
    
 <!-- фильтр выбора отелей -->
 
-    <section>
-        <h2>Найдено: 3</h2>
-        <h3>Сортировка:</h3>
-        <ul>
-            <li>по цене</li>
-            <li><a href="#">по типу</a></li>
-            <li><a href="#">по рейтингу</a></li>
-        </ul>
-      </section>
+  <section>
+  <h2>Найдено: 3</h2>
+  <h3>Сортировка:</h3>
+    <ul>
+      <li>по цене</li>
+      <li><a href="#">по типу</a></li>
+      <li><a href="#">по рейтингу</a></li>
+    </ul>
+  </section>
 <!--стрелки -->
-    <a><img src="img/icon-up-dir.svg" alt="Up"></a>
-    <a><img src="img/icon-down-dir.svg" alt="Down"></a>
+  <a><img src="img/icon-up-dir.svg" alt="Up"></a>
+  <a><img src="img/icon-down-dir.svg" alt="Down"></a>
 <!--стрелки -->
-    <section>
+  <section>
     <article>
       <img src="img/hotel-amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
       <h3>Amara Resort & Spa</h3>
@@ -107,27 +106,25 @@
 
 <main>
 <!--подвал станицы-->
-    <footer>
-        <p>
-        #VISITSEDONA<br>
-        Тел: +7(495) 666-02-66
-        </p>
+<footer>
+  
+  <p>#VISITSEDONA</p>
+  <p>Тел: +7(495) 666-02-66</p>
+  
+  <ul>
+    <li><a href="https://twitter.com/"><img src="img/twitter.svg"></a></li>
+    <li><a href="https://www.facebook.com/"><img src="img/facebook.svg"></a></li>
+    <li><a href="https://www.youtube.com/"><img src="img/youtube.svg"></a></li>
+  </ul>
   
   
-        <ul>
-          <li><a href="https://twitter.com/"><img src="img/twitter.svg"></a></li>
-          <li><a href="https://www.facebook.com/"><img src="img/facebook.svg"></a></li>
-          <li><a href="https://www.youtube.com/"><img src="img/youtube.svg"></a></li>
-        </ul>
-  
-  
-        <p>
-         Website by
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-        </a>
-        </p>
-    </footer>
+  <p>
+    Website by
+    <a href="https://htmlacademy.ru/intensive/htmlcss">
+    <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+    </a>
+  </p>
+</footer>
 <!--подвал станицы-->
 </body>
 </html>
