исправлена разметка и мелкие косяки

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
       <li><a href="info.html">Информация</a></li>
       <li><a href="galery.html">Фото и Видео</a></li>
       <li><a href="map.html">Карта штата</a></li>
-      <li><a href="catalog.html">Гостиницы</a></li>  
+      <li><a href="catalog.html">Гостиницы</a></li>
     </ul>
 
   </nav>
 </header>
-<!--Шапка страницы-->
+<!--/Шапка страницы-->
 
 <!--Основное содержимое-->
 <main>
   <img src="img/background-photo.jpg" alt="фоновое изображение">
   <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
- 
+
   <section>
-    <h2>Седона — небольшой городок в&#160;Аризоне, заслуживающий большего!</h2>
+    <h2>Седона — небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
   </section>
 
@@ -36,36 +36,36 @@
     <ul>
       <li>
         <h3>Настоящий городок</h3>
-         <span> — №1 — </span>
-         <p>Седона — не аттракцион для туристов,там течёт своя жизнь</p>
+        <span> — №1 — </span>
+        <p>Седона — не аттракцион для туристов,там течёт своя жизнь</p>
         <img src="img/feature-picture-1.jpg" width="800" height="256" alt="фотография Седоны">
       </li>
         <ul>
           <li>
-          <img src="img/icon-1.svg" width="75" height="72" alt="Иконка Жилье">
-          <h3>Жилье</h3>
-          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <img src="img/icon-1.svg" width="75" height="72" alt="Иконка Жилье">
+            <h3>Жилье</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
 
           <li>
-          <img src="img/icon-3.svg" width="74" height="70" alt="Иконка Еда">
-          <h3>Еда</h3>
-          <p>Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+            <img src="img/icon-3.svg" width="74" height="70" alt="Иконка Еда">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
           </li>
 
           <li>
-          <img src="img/icon-2.svg" width="64" height="76" alt="Иконка Сувениры">
-          <h3>Сувениры</h3>
-          <p>Не только китайского, но и местного производства!</p>
+            <img src="img/icon-2.svg" width="64" height="76" alt="Иконка Сувениры">
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и местного производства!</p>
           </li>
         </ul>
       <li>
         <h3>Там есть<br>
           Мост дьявола
         </h3>
-          <span> — №2 — </span>
-           <p>Да, по нему можно пройти! Если конечно вы осмелитесь </p>
-          <img src="img/feature-picture-2.jpg" width="800" height="256" alt="Слой 5">
+        <span> — №2 — </span>
+        <p>Да, по нему можно пройти! Если конечно вы осмелитесь </p>
+        <img src="img/feature-picture-2.jpg" width="800" height="256" alt="Слой 5">
       </li>
 
       <li>
@@ -85,14 +85,14 @@
         <span> — №5 — </span>
         <p>Большинство едет в гранд каньон и толпится там</p>
       </li>
-        
+
     </ul>
   </section>
 
   <section>
     <h2>Заинтересовались?</h2>
 
-    <p>Укажите предполагаемые даты&#160;поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    <p>Укажите предполагаемые даты&nbsp;поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
     <button type="button">Поиск гостиницы в Седоне</button>
   </section>
 
@@ -111,37 +111,38 @@
       <input type="date" name="" id="departure day">
     </div>
     <div>
-      <label for="adults">Взрослые:</label>    
+      <label for="adults">Взрослые:</label>
       <button>-</button>
       <input type="number" name="adults" id="adults" value="2" min="1" max="5" step="1">
       <button>+</button>
     </div>
     <div>
-      <label for="kids">Дети:</label>    
+      <label for="kids">Дети:</label>
       <button>-</button>
       <input type="text" name="kids" id="kids" value="0" min="0" max="5" step="1">
       <button>+</button>
     </div>
     <button type="submit">Найти</button>
-  </form> 
+  </form>
 
   </section>
+<!--/Форма поиска гостиницы-->
 
 <!--Интерактивная карта-->
-
-<section>
-  <img src="img/map.png" width="1200" height="593" alt="Карта">
-</section>
+  <section>
+    <img src="img/map.jpg" width="1200" height="593" alt="Карта">
+  </section>
+<!--/Интерактивная карта-->
 
 </main>
-<!--Основное содержимое-->
+<!--/Основное содержимое-->
 
 <!--подвал станицы-->
 <footer>
-  
+
   <p>#VISITSEDONA</p>
   <p>Тел: +7(495) 666-02-66</p>
-  
+
   <ul>
     <li><a href="https://twitter.com/"><img src="img/twitter.svg"></a></li>
     <li><a href="https://www.facebook.com/"><img src="img/facebook.svg"></a></li>
@@ -154,6 +155,6 @@
     <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy"></a>
   </p>
 </footer>
-<!--подвал станицы-->
+<!--/подвал станицы-->
 </body>
 </html>
