--- a/catalog.html
+++ b/catalog.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
 </head>
-  
+
 <body>
 <!--Шапка страницы-->
 <header>
   <nav>
     <a href="index.html">
-    <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
+      <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
     </a>
 
     <ul>
@@ -22,13 +22,13 @@
 
   </nav>
 </header>
-<!--Шапка страницы-->
+<!--/Шапка страницы-->
 
 <!--Основное содержимое-->
 <main>
-<!-- фильтр выбора отелей -->     
+<!-- фильтр выбора отелей -->
   <section>
-  <h2>Фильтр по отелям</h2>
+    <h2>Фильтр по отелям</h2>
     <form action="#" method="#">
       <fieldset>
         <legend>Инфраструктура:</legend>
@@ -51,26 +51,26 @@
       <fieldset>
         <legend>Стоимость в сутки (Р):</legend>
         От 0<input type="range" id="costperday" name="costperday" min="0" max="3000" step="500">До 3000
-        <button type="submit">Показать</button>
       </fieldset>
+      <button type="submit">Показать</button>
     </form>
-  </section>    
-   
-<!-- фильтр выбора отелей -->
+  </section>
+
+<!-- /фильтр выбора отелей -->
 
   <section>
-  <h2>Найдено: 3</h2>
-  <h3>Сортировка:</h3>
-    <ul>
-      <li>по цене</li>
-      <li><a href="#">по типу</a></li>
-      <li><a href="#">по рейтингу</a></li>
+    <h2>Найдено: 3</h2>
+    <h3>Сортировка:</h3>
+      <ul>
+        <li>по цене</li>
+        <li><a href="#">по типу</a></li>
+        <li><a href="#">по рейтингу</a></li>
     </ul>
   </section>
 <!--стрелки -->
   <a><img src="img/icon-up-dir.svg" alt="Up"></a>
   <a><img src="img/icon-down-dir.svg" alt="Down"></a>
-<!--стрелки -->
+<!--/стрелки -->
   <section>
     <article>
       <img src="img/hotel-amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
@@ -104,20 +104,20 @@
     </article>
   </section>
 
-<main>
+</main>
 <!--подвал станицы-->
 <footer>
-  
+
   <p>#VISITSEDONA</p>
   <p>Тел: +7(495) 666-02-66</p>
-  
+
   <ul>
     <li><a href="https://twitter.com/"><img src="img/twitter.svg"></a></li>
     <li><a href="https://www.facebook.com/"><img src="img/facebook.svg"></a></li>
     <li><a href="https://www.youtube.com/"><img src="img/youtube.svg"></a></li>
   </ul>
-  
-  
+
+
   <p>
     Website by
     <a href="https://htmlacademy.ru/intensive/htmlcss">
@@ -125,6 +125,6 @@
     </a>
   </p>
 </footer>
-<!--подвал станицы-->
+<!--/подвал станицы-->
 </body>
 </html>
