--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <li><a href="map.html">Карта штата</a></li>
       <li><a href="catalog.html">Гостиницы</a></li>
     </ul>
-
   </nav>
 </header>
 <!--/Шапка страницы-->
@@ -101,30 +100,29 @@
   <section>
     <h2>Поиск гостиницы в Седоне</h2>
 
-  <form action="#" method="#">
-    <div>
-      <label for="arrival day">Дата заезда:</label>
-      <input type="date" name="arrival day" id="arrival day">
-    </div>
-    <div>
-      <label for="departure day">Дата выезда:</label>
-      <input type="date" name="" id="departure day">
-    </div>
-    <div>
-      <label for="adults">Взрослые:</label>
-      <button>-</button>
-      <input type="number" name="adults" id="adults" value="2" min="1" max="5" step="1">
-      <button>+</button>
-    </div>
-    <div>
-      <label for="kids">Дети:</label>
-      <button>-</button>
-      <input type="text" name="kids" id="kids" value="0" min="0" max="5" step="1">
-      <button>+</button>
-    </div>
-    <button type="submit">Найти</button>
-  </form>
-
+    <form action="#" method="#">
+      <div>
+        <label for="arrival day">Дата заезда:</label>
+        <input type="date" name="arrival day" id="arrival day">
+      </div>
+      <div>
+        <label for="departure day">Дата выезда:</label>
+        <input type="date" name="" id="departure day">
+      </div>
+      <div>
+        <label for="adults">Взрослые:</label>
+        <button>-</button>
+        <input type="number" name="adults" id="adults" value="2" min="1" max="5" step="1">
+        <button>+</button>
+      </div>
+      <div>
+        <label for="kids">Дети:</label>
+        <button>-</button>
+        <input type="text" name="kids" id="kids" value="0" min="0" max="5" step="1">
+        <button>+</button>
+      </div>
+      <button type="submit">Найти</button>
+    </form>
   </section>
 <!--/Форма поиска гостиницы-->
 
@@ -144,9 +142,9 @@
   <p>Тел: +7(495) 666-02-66</p>
 
   <ul>
-    <li><a href="https://twitter.com/"><img src="img/twitter.svg"></a></li>
-    <li><a href="https://www.facebook.com/"><img src="img/facebook.svg"></a></li>
-    <li><a href="https://www.youtube.com/"><img src="img/youtube.svg"></a></li>
+    <li><a href="https://twitter.com/" class="Twitter">Twitter</a></li>
+    <li><a href="https://www.facebook.com/" class="Facebook">Facebook</a></li>
+    <li><a href="https://www.youtube.com/" class="youtube">Youtube</a></li>
   </ul>
 
   <p>
