--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
 <main>
 <!-- фильтр выбора отелей -->
   <section>
-    <h2>Фильтр по отелям</h2>
+    <h2 class="visually-hidden">Фильтр по отелям</h2>
     <form action="#" method="post">
       <fieldset>
         <legend>Инфраструктура:</legend>
