--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <link href="css/styles.css" rel="stylesheet">
   <title>HTML Academy: Седона</title>
 </head>
 <body>
 <!--Шапка страницы-->
-<header>
+<header class="main-header">
   <nav>
     <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
 
@@ -25,12 +26,12 @@
   <img src="img/background-photo.jpg" alt="фоновое изображение">
   <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
 
-  <section>
+  <section class="description">
     <h2>Седона — небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
   </section>
 
-  <section>
+  <section class="advantages">
     <h2>Преимущества Седоны</h2>
     <ul>
       <li>
@@ -100,14 +101,14 @@
   <section>
     <h2>Поиск гостиницы в Седоне</h2>
 
-    <form action="#" method="#">
+    <form action="#" method="POST">
       <div>
         <label for="arrival day">Дата заезда:</label>
-        <input type="date" name="arrival day" id="arrival day">
+        <input type="date" name="arrival day" id="arrival day" placeholder="24 апреля 2017">
       </div>
       <div>
         <label for="departure day">Дата выезда:</label>
-        <input type="date" name="" id="departure day">
+        <input type="date" name="departure day" id="departure day" placeholder="4 июля 2017">
       </div>
       <div>
         <label for="adults">Взрослые:</label>
@@ -118,7 +119,7 @@
       <div>
         <label for="kids">Дети:</label>
         <button>-</button>
-        <input type="text" name="kids" id="kids" value="0" min="0" max="5" step="1">
+        <input type="number" name="kids" id="kids" value="0" min="0" max="5" step="1">
         <button>+</button>
       </div>
       <button type="submit">Найти</button>
