--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Седона: Отели</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
 <!--Шапка страницы-->
 <header class="page-header">
-  <nav>
+  <nav class="main-navigation">
     <a href="index.html">
       <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
     </a>
