--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <link href="css/styles.css" rel="stylesheet">
   <title>HTML Academy: Седона</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 <!--Шапка страницы-->
 <header class="page-header">
-  <nav>
+  <nav class="main-navigation">
     <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
 
     <ul class="navi">
@@ -23,7 +25,6 @@
 
 <!--Основное содержимое-->
 <main>
-  <img src="img/background-photo.jpg" alt="фоновое изображение">
   <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
 
   <section class="description">
@@ -35,9 +36,11 @@
     <h2 class="visually-hidden">Преимущества Седоны</h2>
     <ul class="advantages">
       <li class="true-city">
+        <div class="index-true">
         <h3>Настоящий городок</h3>
         <span> — №1 — </span>
         <p>Седона — не аттракцион для туристов,там течёт своя жизнь</p>
+      </div>
         <img src="img/feature-picture-1.jpg" width="800" height="256" alt="фотография Седоны">
       </li>
         <ul class="additional">
