продолжил базовую стилизацию

--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
           </li>
         </ul>
       <li class="bridge">
-        <h3>Там есть<br>
-          Мост дьявола
-        </h3>
-        <span> — №2 — </span>
-        <p>Да, по нему можно пройти! Если конечно вы осмелитесь </p>
-        <img src="img/feature-picture-2.jpg" width="800" height="256" alt="Слой 5">
+        <div class="index-true">
+          <h3>Там есть<br>
+            Мост дьявола
+          </h3>
+          <span> — №2 — </span>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь </p>
+          <img src="img/feature-picture-2.jpg" width="800" height="256" alt="Слой 5">
+        </div>
       </li>
 
       <li class="area">
@@ -96,7 +98,7 @@
     <h2>Заинтересовались?</h2>
 
     <p>Укажите предполагаемые даты&nbsp;поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-    <button type="button">Поиск гостиницы в Седоне</button>
+    <button type="button" class="search-button" >Поиск гостиницы в Седоне</button>
   </section>
 
 
@@ -147,8 +149,8 @@
   <p>Тел: +7(495) 666-02-66</p>
 
   <ul class="social-networks">
-    <li><a href="https://twitter.com/" class="Twitter">Twitter</a></li>
-    <li><a href="https://www.facebook.com/" class="Facebook">Facebook</a></li>
+    <li><a href="https://twitter.com/" class="twitter">Twitter</a></li>
+    <li><a href="https://www.facebook.com/" class="facebook">Facebook</a></li>
     <li><a href="https://www.youtube.com/" class="youtube">Youtube</a></li>
   </ul>
 
