--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="hotel-page">
 <!--Шапка страницы-->
 <header class="page-header">
   <nav class="main-navigation">
@@ -16,7 +16,7 @@
       <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
     </a>
 
-    <ul class="navi">
+    <ul class="site-navigation">
       <li><a href="info.html">Информация</a></li>
       <li><a href="galery.html">Фото и Видео</a></li>
       <li><a href="map.html">Карта штата</a></li>
