--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav class="main-navigation">
     <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
 
-    <ul class="navi">
+    <ul class="site-navigation">
       <li><a href="info.html">Информация</a></li>
       <li><a href="galery.html">Фото и Видео</a></li>
       <li><a href="map.html">Карта штата</a></li>
@@ -104,30 +104,32 @@
 
 <!--Форма поиска гостиницы-->
   <section class="search-hotels">
-    <h2>Поиск гостиницы в Седоне</h2>
+    <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
 
-    <form action="#" method="POST">
-      <div>
+    <form action="https://echo.htmlacademy.ru" method="POST">
+      <div class="conteiner-date">
         <label for="arrival day">Дата заезда:</label>
-        <input type="date" name="arrival day" id="arrival day" placeholder="24 апреля 2017">
+        <input type="date" name="arrival day" id="arrival day" placeholder="24 апреля 2017"/>
+        <button type="button">Календарь</button>
       </div>
-      <div>
+      <div class="conteiner-date">
         <label for="departure day">Дата выезда:</label>
-        <input type="date" name="departure day" id="departure day" placeholder="4 июля 2017">
+        <input type="date" name="departure day" id="departure day" placeholder="4 июля 2017"/>
+        <button type="button">Календарь</button>
       </div>
-      <div>
+      <div class="container-adults">
         <label for="adults">Взрослые:</label>
-        <button>-</button>
-        <input type="number" name="adults" id="adults" value="2" min="1" max="5" step="1">
-        <button>+</button>
+        <button type="button">-</button>
+        <input type="number" name="adults" id="adults" value="2" min="1" max="5" step="1"/>
+        <button type="button">+</button>
       </div>
-      <div>
+      <div class="container-kids">
         <label for="kids">Дети:</label>
-        <button>-</button>
-        <input type="number" name="kids" id="kids" value="0" min="0" max="5" step="1">
-        <button>+</button>
+        <button type="button">-</button>
+        <input type="number" name="kids" id="kids" value="0" min="0" max="5" step="1"/>
+        <button type="button">+</button>
       </div>
-      <button type="submit">Найти</button>
+      <button type="submit" class="blue-search-button">Найти</button>
     </form>
   </section>
 <!--/Форма поиска гостиницы-->
@@ -154,7 +156,7 @@
     <li><a href="https://www.youtube.com/" class="youtube">Youtube</a></li>
   </ul>
 
-  <p class="copyright">
+  <p>
     Website by
     <a href="https://htmlacademy.ru/intensive/htmlcss">
     <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy"></a>
