add example 2 range-slider

--- a/catalog.html
+++ b/catalog.html
@@ -59,6 +59,18 @@
           <label for="coststop">До 3000</label>
           <input type="text" id="coststop" name="coststop" max="3000"  step="100">
         </fieldset>
+
+        <!-- пример из ответов на вопрос к лекции
+        <div class="range-slider">
+          <input type="number" value="0" name="min">
+          <input type="number" value="0" name="max">
+
+          <div class="range-slider-track">
+            <div class="range-slider-pin range-slider-pin-min"></div>
+            <div class="range-slider-pin range-slider-pin-max"></div>
+          </div>
+        </div>
+        -->
         <button type="submit">Показать</button>
       </div>
     </form>
