--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
 <!--Шапка страницы-->
+<div class="wrap">
 <header class="page-header">
   <nav class="main-navigation">
-    <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
-
+    <a><img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона" style="position: absolute;"></a>
+    <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
     <ul class="site-navigation">
       <li><a href="info.html">Информация</a></li>
       <li><a href="galery.html">Фото и Видео</a></li>
@@ -25,8 +26,6 @@
 
 <!--Основное содержимое-->
 <main>
-  <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
-
   <section class="description">
     <h2>Седона — небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -163,5 +162,6 @@
   </p>
 </footer>
 <!--/подвал станицы-->
+</div>
 </body>
 </html>
