--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 </head>
 <body>
 <!--Шапка страницы-->
-<div class="wrap">
+<div class="wrapper">
 <header class="page-header">
   <nav class="main-navigation">
-    <a><img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона" style="position: absolute;"></a>
-    <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
-    <ul class="site-navigation">
+    <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона" style="position: absolute; left: 50%;top: 0;z-index: 11;margin-left: -70px;">
+    <ul class="site-navigation list-style-none">
       <li><a href="info.html">Информация</a></li>
       <li><a href="galery.html">Фото и Видео</a></li>
       <li><a href="map.html">Карта штата</a></li>
       <li><a href="catalog.html">Гостиницы</a></li>
     </ul>
   </nav>
+  <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать">
 </header>
 <!--/Шапка страницы-->
 
 <!--Основное содержимое-->
-<main>
+<main class="page-index">
   <section class="description">
     <h2>Седона — небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -33,7 +33,7 @@
 
   <section class="main-advantages">
     <h2 class="visually-hidden">Преимущества Седоны</h2>
-    <ul class="advantages">
+    <ul class="advantages list-style-none">
       <li class="true-city">
         <div class="index-true">
         <h3>Настоящий городок</h3>
@@ -42,7 +42,7 @@
       </div>
         <img src="img/feature-picture-1.jpg" width="800" height="256" alt="фотография Седоны">
       </li>
-        <ul class="additional">
+        <ul class="additional list-style-none">
           <li class="accommodation">
             <img src="img/icon-1.svg" width="75" height="72" alt="Иконка Жилье">
             <h3>Жилье</h3>
@@ -149,7 +149,7 @@
   <p>#VISITSEDONA</p>
   <p>Тел: +7(495) 666-02-66</p>
 
-  <ul class="social-networks">
+  <ul class="social-networks list-style-none">
     <li><a href="https://twitter.com/" class="twitter">Twitter</a></li>
     <li><a href="https://www.facebook.com/" class="facebook">Facebook</a></li>
     <li><a href="https://www.youtube.com/" class="youtube">Youtube</a></li>
