--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
       <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
     </a>
 
-    <ul class="site-navigation">
+    <ul class="site-navigation list-style-none">
       <li><a href="info.html">Информация</a></li>
       <li><a href="galery.html">Фото и Видео</a></li>
       <li><a href="map.html">Карта штата</a></li>
@@ -28,7 +28,7 @@
 <!--/Шапка страницы-->
 
 <!--Основное содержимое-->
-<main>
+<main class="page-hotels">
 <!-- фильтр выбора отелей -->
   <section class="feature-filter-hotels">
     <h2 class="visually-hidden">Фильтр по отелям</h2>
@@ -81,7 +81,7 @@
   <section class="feature-results">
     <h2>Найдено: 3</h2>
     <h3>Сортировка:</h3>
-      <ul class="feature-filter">
+      <ul class="feature-filter list-style-none">
         <li><a>по цене</a></li> <!--сделать класс active-->
         <li><a href="#">по типу</a></li>
         <li><a href="#">по рейтингу</a></li>
@@ -133,7 +133,7 @@
   <p>#VISITSEDONA</p>
   <p>Тел: +7(495) 666-02-66</p>
 
-  <ul class="social-networks">
+  <ul class="social-networks list-style-none">
     <li><a href="https://twitter.com/" class="Twitter">Twitter</a></li>
     <li><a href="https://www.facebook.com/" class="Facebook">Facebook</a></li>
     <li><a href="https://www.youtube.com/" class="youtube">Youtube</a></li>
